// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Nav/mobile/navbar it renders 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 24px 16px;
  background: #F8F8F8;
  position: relative;
  z-index: 153;
}

.emotion-1 {
  line-height: 0;
  z-index: 200;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 6px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  z-index: 152;
  background: #F8F8F8;
}

.emotion-3 {
  z-index: 200;
  width: 20px;
}

.emotion-3:hover {
  cursor: pointer;
}

.emotion-3:before,
.emotion-3:after,
.emotion-3 .hamburger-content {
  content: "";
  background-color: #999999;
  border-radius: 10px;
  display: block;
  height: 2px;
  margin: 4px 0;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}

.emotion-3.active:before {
  -webkit-transform: translateY(7px) rotate(137deg);
  -moz-transform: translateY(7px) rotate(137deg);
  -ms-transform: translateY(7px) rotate(137deg);
  transform: translateY(7px) rotate(137deg);
}

.emotion-3.active:after {
  -webkit-transform: translateY(-5px) rotate(-140deg);
  -moz-transform: translateY(-5px) rotate(-140deg);
  -ms-transform: translateY(-5px) rotate(-140deg);
  transform: translateY(-5px) rotate(-140deg);
}

.emotion-3.active .hamburger-content {
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

<div
  className="emotion-0"
>
  <a
    className="emotion-1"
    href="/"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <div
      id="RED"
    />
  </a>
  <div
    className="emotion-2"
  >
    <div
      aria-label="open navigation menu"
      className="emotion-3"
      onClick={[MockFunction]}
      role="button"
      tabIndex={0}
    >
      <div
        className="hamburger-content"
      />
    </div>
  </div>
</div>
`;

exports[`screen: Nav/mobile/navbar toggleNavMenus is called onClick 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 24px 16px;
  background: #F8F8F8;
  position: relative;
  z-index: 153;
}

.emotion-1 {
  line-height: 0;
  z-index: 200;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 6px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 0;
  z-index: 152;
  background: #F8F8F8;
}

.emotion-3 {
  z-index: 200;
  width: 20px;
}

.emotion-3:hover {
  cursor: pointer;
}

.emotion-3:before,
.emotion-3:after,
.emotion-3 .hamburger-content {
  content: "";
  background-color: #999999;
  border-radius: 10px;
  display: block;
  height: 2px;
  margin: 4px 0;
  -webkit-transition: all 0.4s ease-in-out;
  transition: all 0.4s ease-in-out;
}

.emotion-3.active:before {
  -webkit-transform: translateY(7px) rotate(137deg);
  -moz-transform: translateY(7px) rotate(137deg);
  -ms-transform: translateY(7px) rotate(137deg);
  transform: translateY(7px) rotate(137deg);
}

.emotion-3.active:after {
  -webkit-transform: translateY(-5px) rotate(-140deg);
  -moz-transform: translateY(-5px) rotate(-140deg);
  -ms-transform: translateY(-5px) rotate(-140deg);
  transform: translateY(-5px) rotate(-140deg);
}

.emotion-3.active .hamburger-content {
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

<div
  className="emotion-0"
>
  <a
    className="emotion-1"
    href="/"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <div
      id="RED"
    />
  </a>
  <div
    className="emotion-2"
  >
    <div
      aria-label="open navigation menu"
      className="emotion-3"
      onClick={
        [MockFunction] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      role="button"
      tabIndex={0}
    >
      <div
        className="hamburger-content"
      />
    </div>
  </div>
</div>
`;
